old/Radarr/overlays/example/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.154
  selector:
    app: radarr
  ports:
  - name: "radarr-web"
    protocol: TCP
    targetPort: 7878
    port: 7878
