old/Radarr/overlays/example/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "radarr"
spec:
  hosts:
    - deimos.sol.milkyway
  gateways:
    - radarr
  http:
    - match:
      - uri:
          prefix: "/"
      route:
        - destination:
            host: "radarr"
            port:
              number: 7878
